plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.134'
}

group = 'redstonedubstep.mods'
version = mod_version

base {
    archivesName = 'playernamemodifier'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

neoForge {
    version = "${neo_version}"
    validateAccessTransformers = true

    runs {
        configureEach {
            logLevel = org.slf4j.event.Level.DEBUG
            gameDirectory = project.file('run/' + name)
            ideName = "${project.mc_version} " + ideName.get()
        }

        client {
            client()
        }

        server {
            server()
            programArgument('-nogui')
        }
    }

    mods {
        playernamemodifier {
            sourceSet(sourceSets.main)
        }
    }
}

dependencies {
    // You may put jars on which you depend on in ./libs or you may define them like so..
    // compile "some.group:artifact:version:classifier"
    // compile "some.group:artifact:version"

    // Real examples
    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env

    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // These dependencies get remapped to your current MCP mappings
    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // For more info...
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

jar {
    archiveFileName = "PlayerNameModifier-${project.mc_version}-${version}.jar"

    manifest {
        attributes(["Specification-Title": "PlayerNameModifier",
                    "Specification-Vendor": "Redstone_Dubstep",
                    "Specification-Version": "${version}",
                    "Implementation-Title": "PlayerNameModifier",
                    "Implementation-Version": "${version}",
                    "Implementation-Vendor" :"Redstone_Dubstep",
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}